add button color change

--- a/login.html
+++ b/login.html
@@ -21,9 +21,11 @@
 
         <div class="wrapper_right_content">
           <img class="wrapper_right_logo" src="img/logo_text.png">
-          <input id="wrapper_right_content_input_id" t ype="text" placeholder="Phone number, username, or email">
-          <input id="wrapper_right_content_input_password" type="password" placeholder="Password">
-          <button id="Login_button" type="button">Log In</button>
+          <input class="wrapper_right_content_input_id" id="wrapperRightContentInputId" t ype="text"
+            placeholder="Phone number, username, or email">
+          <input class="wrapper_right_content_input_password" id="wrapperRightContentInputPw" type="password"
+            placeholder="Password">
+          <button class="Login_button" id="LoginButton" type="button">Log In</button>
 
           <div class="wrapper_right_content_or">
             <div class="wrapper_right_content_or_slash">
@@ -77,6 +79,8 @@
   </section>
 
   <script src="js/login.js"></script>
+
+
 </body>
 
 </html>
