--- a/main.html
+++ b/main.html
@@ -174,9 +174,17 @@
                   <span><img src="img/wecode.jpeg"></span>
                   <span>121likes</span>
                 </div>
-                <div class="main_feed_article_peoples_bottom_idwithcontents">
-                  <span>sanghun_lee</span>
-                  <span>Thank you~!~!~</span>
+                <div class="main_feed_article_peoples_bottom_idwithcontents" id="addComment">
+                  <div class="comment_add">
+                    <span>sanghun_lee</span>
+                    <span>Thank you~!~!~</span>
+                  </div>
+                  <!--
+                  <div class="comment_add">
+                    <span>sanghun_lee</span>
+                    <span>Thank you~!~!~</span>
+                  </div>
+                  -->
                 </div>
                 <div class="main_feed_article_peoples_bottom_postingtime">
                   <span>77 Minute</span>
@@ -184,7 +192,7 @@
               </div>
 
               <section class="main_feed_article_peoples_bottom_comment">
-                <textarea type="text" placeholder="Add a comment..."></textarea>
+                <textarea id="feedCommentInput" type="text" placeholder="Add a comment..."></textarea>
                 <button type="submit">
                   Post
                 </button>
