enter key and like bth

--- a/main.html
+++ b/main.html
@@ -55,55 +55,72 @@
               <li>
                 <div class="" style="border: 1px solid #C62F90; border-radius: 100%; padding: 2px;">
                   <div class="storyboardCircle">
+                    <img
+                      src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-19/s150x150/67310557_649773548849427_4130659181743046656_n.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_ohc=GacGZMKmYSkAX8paGd3&oh=e63fcea941b31312d76ac7600f134f91&oe=5F4B8153">
                   </div>
                 </div>
-                <span id="exampleId">Dragon</span>
+                <span id="exampleId">cristiano</span>
               </li>
               <li>
                 <div class="" style="border: 1px solid #C62F90; border-radius: 100%; padding: 2px;">
                   <div class="storyboardCircle">
+                    <img
+                      src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-19/s150x150/80338838_604414493436078_7469035702127165440_n.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_ohc=bgxJv4NQZnkAX_SANq3&oh=a3ef7958ee069fde9e640c3a829aaa77&oe=5F4BFEDA">
                   </div>
                 </div>
-                <span>Dragon</span>
+                <span>barbour</span>
               </li>
               <li>
                 <div class="" style="border: 1px solid #C62F90; border-radius: 100%; padding: 2px;">
                   <div class="storyboardCircle">
+                    <img
+                      src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-19/s150x150/28434316_190831908314778_1954023563480530944_n.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_ohc=7aJzIwfMF3oAX9v5H1P&oh=ce955902b7f10bc65eb6cb1ec8351b8b&oe=5F4AA460">
                   </div>
                 </div>
-                <span>Dragon</span>
+                <span>dlwlrma</span>
               </li>
               <li>
                 <div class="" style="border: 1px solid #C62F90; border-radius: 100%; padding: 2px;">
                   <div class="storyboardCircle">
+                    <img
+                      src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-19/s150x150/64886997_457854294768762_7513079337617195008_n.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_ohc=AuQdC0wnZuAAX8f0gYn&oh=7251c0f730395fbe997d2254379fda11&oe=5F4CA942">
                   </div>
                 </div>
-                <span>Dragon</span>
+                <span>giantpengsoo</span>
               </li>
               <li>
                 <div class="" style="border: 1px solid #C62F90; border-radius: 100%; padding: 2px;">
                   <div class="storyboardCircle">
+                    <img
+                      src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-19/s150x150/100484103_293136678519815_487177234147180544_n.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_ohc=EuizK8F2nFwAX_JaKvy&oh=405eb1dedaa04a1ebfc99ea310a93b8d&oe=5F4C7FC9">
                   </div>
                 </div>
-                <span>Dragon</span>
+                <span>ye_heumheumm
+
+                </span>
               </li>
               <li>
                 <div class="" style="border: 1px solid #C62F90; border-radius: 100%; padding: 2px;">
                   <div class="storyboardCircle">
+                    <img
+                      src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-19/s150x150/104335883_266378381089415_5080961817201531810_n.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_ohc=1VX77ISQWQIAX9wV92U&oh=44ddc604fa87d193aa08e4ebe1d56e7c&oe=5F49F5BE">
                   </div>
                 </div>
-                <span>Dragon</span>
+                <span>yeonukhwang</span>
               </li>
               <li>
                 <div class="" style="border: 1px solid #C62F90; border-radius: 100%; padding: 2px;">
                   <div class="storyboardCircle">
+                    <img
+                      src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-19/s150x150/12424444_532565470264126_1212562276_a.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_ohc=qDR6jXK3KpwAX8mkkUs&oh=0c4fb2cfe9f826a6005199c090e3f598&oe=5F4BDC8E">
                   </div>
                 </div>
-                <span>Dragon</span>
+                <span>gitmanvintage</span>
               </li>
               <li>
                 <div class="" style="border: 1px solid #C62F90; border-radius: 100%; padding: 2px;">
                   <div class="storyboardCircle">
+                    <img src="">
                   </div>
                 </div>
                 <span>Dragon</span>dfdfdfdf
@@ -134,10 +151,11 @@
             </header>
             <div class="main_feed_article_peoples_header">
               <div class="main_feed_article_peoples_header_left">
-                <span class="main_feed_article_peoples_header_leftimg"><img src="img/howl.jpg"></span>
+                <span class="main_feed_article_peoples_header_leftimg"><img
+                    src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-19/s150x150/97136862_702839713802578_7837045271895736320_n.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_ohc=RKEStn8EIRIAX_DAFmT&oh=efad139222216e0b4d279e78bbfa753e&oe=5F4A15B9"></span>
                 <div class="main_feed_article_peoples_header_left_wrapperforimg">
-                  <span class="main_feed_article_peoples_header_leftname">sanghun_lee</span>
-                  <div class="main_feed_article_peoples_header_leftplace">Wecode</div>
+                  <span class="main_feed_article_peoples_header_leftname">garethbale11</span>
+                  <div class="main_feed_article_peoples_header_leftplace"></div>
                 </div>
               </div>
               <div class="main_feed_article_peoples_header_rightbtn">
@@ -148,13 +166,14 @@
             </div>
             <!--for header right side Three dot button-->
             <div class="main_feed_article_peoples_main">
-              <img src="img/howl2.jpeg">
+              <img
+                src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-15/e35/109471108_2739580409619744_6586617576396670755_n.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_cat=100&_nc_ohc=DV5jqtiVlmUAX-fhVlc&oh=e250ac900db6a8d80db62c538c0c6ea6&oe=5F4C0287">
             </div>
             <!--for main image-->
             <section class="main_feed_article_peoples_button">
               <div class="main_feed_article_peoples_button_iconwrapper">
-                <span class="main_feed_article_peoples_button_icon" id="heart">
-                  <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/heart.png">
+                <span class="main_feed_article_peoples_button_icon" id="inheart">
+                  <img id="heartimg" src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/heart.png">
                 </span>
                 <span class="main_feed_article_peoples_button_icon">
                   <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/comment.png">
@@ -176,8 +195,10 @@
                 </div>
                 <div class="main_feed_article_peoples_bottom_idwithcontents" id="addComment">
                   <div class="comment_add">
-                    <span>sanghun_lee</span>
-                    <span>Thank you~!~!~</span>
+                    <span>
+                      garethbale11
+                    </span>
+                    <span>🏆 Champions!</span>
                   </div>
                 </div>
                 <div class="main_feed_article_peoples_bottom_postingtime">
@@ -289,9 +310,11 @@
             <!--for main image-->
             <section class="main_feed_article_peoples_button">
               <div class="main_feed_article_peoples_button_iconwrapper">
-                <span class="main_feed_article_peoples_button_icon">
-                  <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/heart.png">
-                </span>
+                <button>
+                  <span class="main_feed_article_peoples_button_icon">
+                    <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/heart.png">
+                  </span>
+                </button>
                 <span class="main_feed_article_peoples_button_icon">
                   <img src="https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/comment.png">
                 </span>
@@ -348,10 +371,58 @@
             <div class="main_right_foryou">
               <div class="main_right_foryou_people">
                 <div class="main_right_foryou_people_picture">
-                  <img width="30px" height="30px" src="img/leftiamge.png" alt="sajin">
+                  <img width="30px" height="30px"
+                    src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-19/s150x150/111488690_2366595423640428_13054586042152518_n.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_ohc=5stPjaX3B_wAX8T-c_r&oh=f2219842aca82e8ecdaa662cccfd0d1f&oe=5F4AB820"
+                    alt="sajin">
                   <div class="main_right_foryou_people_name">
 
-                    <span>Wecode</span>
+                    <span>realmadrid</span>
+                    <span>Friend on Facebook</span>
+                  </div>
+                </div>
+                <div class="main_right_foryou_people_follow">
+                  <a href="main.html">Follow</a>
+                </div>
+              </div>
+              <div class="main_right_foryou_people">
+                <div class="main_right_foryou_people_picture">
+                  <img width="30px" height="30px"
+                    src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-19/s150x150/97136862_702839713802578_7837045271895736320_n.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_ohc=RKEStn8EIRIAX_DAFmT&oh=efad139222216e0b4d279e78bbfa753e&oe=5F4A15B9"
+                    alt="sajin">
+                  <div class="main_right_foryou_people_name">
+
+                    <span>garethbale11</span>
+                    <span>Follows you</span>
+                  </div>
+                </div>
+                <div class="main_right_foryou_people_follow">
+                  <a href="main.html">Follow</a>
+                </div>
+              </div>
+              <div class="main_right_foryou_people">
+                <div class="main_right_foryou_people_picture">
+                  <img width="30px" height="30px"
+                    src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-19/s150x150/43334783_496710107512397_2449280142212595712_n.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_ohc=yNLW9baUJa4AX_Lt7pn&oh=6b8d38cb5479768f4fcb990dce602ebb&oe=5F4B08ED"
+                    alt="sajin">
+                  <div class="main_right_foryou_people_name">
+
+                    <span>levis.vintage.clothing
+                    </span>
+                    <span>Friend on Facebook</span>
+                  </div>
+                </div>
+                <div class="main_right_foryou_people_follow">
+                  <a href="main.html">Follow</a>
+                </div>
+              </div>
+              <div class="main_right_foryou_people">
+                <div class="main_right_foryou_people_picture">
+                  <img width="30px" height="30px"
+                    src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-19/s150x150/18879507_232995350534564_1812863153990533120_a.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_ohc=NVFCha_BR3wAX_IDVVs&oh=575c14dc0d452bfd7aab5c20a3d7890b&oe=5F4AA3D4"
+                    alt="sajin">
+                  <div class="main_right_foryou_people_name">
+
+                    <span>randomwalkshop</span>
                     <span>New to Instagram</span>
                   </div>
                 </div>
@@ -361,50 +432,13 @@
               </div>
               <div class="main_right_foryou_people">
                 <div class="main_right_foryou_people_picture">
-                  <img width="30px" height="30px" src="img/howl.jpg" alt="sajin">
+                  <img width="30px" height="30px"
+                    src="https://scontent-gmp1-1.cdninstagram.com/v/t51.2885-19/s150x150/64219646_866712363683753_7365878438877462528_n.jpg?_nc_ht=scontent-gmp1-1.cdninstagram.com&_nc_ohc=1QhcpY8coE4AX-VYkSs&oh=3b4dc8cc60aee32beb0cc8e74566cc05&oe=5F4B70F0"
+                    alt="sajin">
                   <div class="main_right_foryou_people_name">
 
-                    <span>Wecode</span>
-                    <span>New to Instagram</span>
-                  </div>
-                </div>
-                <div class="main_right_foryou_people_follow">
-                  <a href="main.html">Follow</a>
-                </div>
-              </div>
-              <div class="main_right_foryou_people">
-                <div class="main_right_foryou_people_picture">
-                  <img width="30px" height="30px" src="img/howl.jpg" alt="sajin">
-                  <div class="main_right_foryou_people_name">
-
-                    <span>Wecode</span>
-                    <span>New to Instagram</span>
-                  </div>
-                </div>
-                <div class="main_right_foryou_people_follow">
-                  <a href="main.html">Follow</a>
-                </div>
-              </div>
-              <div class="main_right_foryou_people">
-                <div class="main_right_foryou_people_picture">
-                  <img width="30px" height="30px" src="img/howl.jpg" alt="sajin">
-                  <div class="main_right_foryou_people_name">
-
-                    <span>Wecode</span>
-                    <span>New to Instagram</span>
-                  </div>
-                </div>
-                <div class="main_right_foryou_people_follow">
-                  <a href="main.html">Follow</a>
-                </div>
-              </div>
-              <div class="main_right_foryou_people">
-                <div class="main_right_foryou_people_picture">
-                  <img width="30px" height="30px" src="img/howl.jpg" alt="sajin">
-                  <div class="main_right_foryou_people_name">
-
-                    <span>Wecode</span>
-                    <span>New to Instagram</span>
+                    <span>wecode_bootcamp</span>
+                    <span>Followed by randomwalkshop + 6 more</span>
                   </div>
                 </div>
                 <div class="main_right_foryou_people_follow">
